Replaced LineChart of recharts with XYPlot of react-vis in OkrProgressChart. Fixed duplicate key warning in OKRAlignmentsInfo.

--- a/skrum_frontend/src/project/OKRDetails/OkrProgressChart.css
+++ b/skrum_frontend/src/project/OKRDetails/OkrProgressChart.css
@@ -1,4 +1,14 @@
 .component {
+  height: 100%;
+  max-height: 100%;
+}
+.chart {
+  -webkit-touch-callout: none; /* iOS Safari */
+  -webkit-user-select: none; /* Safari */
+  -khtml-user-select: none; /* Konqueror HTML */
+  -moz-user-select: none; /* Firefox */
+  -ms-user-select: none; /* Internet Explorer/Edge */
+  user-select: none; /* Non-prefixed version, currently supported by Chrome and Opera */
 }
 .progressChart {
   font-size: x-small;
